@@ -268,6 +268,7 @@ a.stats_link.missing span	{color:#000;}
 /*	Footer notes styles
 	============================================= */
 .description_wrap		{width:100%; margin:0 auto; background:#FFF; padding-bottom:40px; margin-top:40px;}
+.data_quality_wrap		{background-color:rgba(255,255,255,1); color:#000; width:880px; margin:0 auto; padding:40px; margin-bottom:3em;}
 .footer_notes			{width:960px; margin:0 auto; padding:40px 0; text-align:left; margin-bottom:40px; margin-top:20px; padding-top:20px;}
 .footer_notes.data_quality_wrap	{background-color:#FFF;}
 .footer_notes span.title	{display:block; color:#000; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-bottom:1px solid #000;}
