@@ -310,6 +310,7 @@ a.stats_link.missing span	{color:#008FFF;}
 /*	Footer notes styles
 	============================================= */
 .description_wrap		{width:100%; margin:0 auto; background:linear-gradient(to bottom, rgba(0,14,32,0) 0%,rgba(0,14,32,0.5) 60%,rgba(0,14,32,0.9) 100%); background:-prefix-linear-gradient(to bottom, rgba(0,14,32,0) 0%,rgba(0,14,32,0.5) 60%,rgba(0,14,32,0.9) 100%); padding-bottom:40px; margin-top:40px;}
+.data_quality_wrap		{background-color:rgba(238,238,238,1); color:#444; width:880px; margin:0 auto; padding:40px; margin-bottom:3em;}
 .footer_notes			{width:880px; margin:0 auto; padding:40px; text-align:left; margin-bottom:40px; margin-top:20px; padding-top:20px; background-color:rgba(255,255,255,0.1);}
 .footer_notes span.title	{display:block; color:#FFF; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-bottom:1px solid #FFF;}
 .footer_notes span.title.sub{font-size:20px; border:0; margin:0; padding-bottom:5px;}
