@@ -2,6 +2,7 @@ Development Portal (2025-01-07 shi)
 ==============================
 Add new theme
 Update crumb seperator
+Update data quality page
 
 Development Portal (2024-09-04 shi)
 ==============================
